# fastcord-api

./: .env.example  Dockerfile.dev  Taskfile.yml  alembic.ini  dev.Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml
fastcord/: app.py  config.py  db.py  enums.py  settings.py  wsgi.py
fastcord/models/: __init__.py  base.py  channel.py  channel_group.py  emoji.py  guild.py  message.py  user.py
fastcord/routes/: channel.py  channel_group.py  guild.py
fastcord/schemas/: __init__.py  base.py  channel.py  channel_group.py  emoji.py  guild.py  message.py  user.py
fixtures/: test-data.yml
migrations/: env.py
migrations/versions/: 2023_08_26_1545-3d8037b0c18e_create_initial_models.py  2023_08_27_1450-5a4cdcbe4019_create_initial_models.py  2023_08_27_1802-a13c6421f024_add_order_fields_to_channels.py  a3eef326795f_create_models.py~
proxy/: nginx.conf
scripts/: load_fixtures.py
