[tool.poetry]
name = "fastcord"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
requests = "^2.28.1"
python-dotenv = "^0.21.0"
flask-session = "^0.4.0"
redis = "^4.4.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"