[tool.poetry]
name = "fastcord"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.4.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
motor = "^3.2.0"
mongoengine = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
